WRP-9583: Fixed MediaPlayer knob on focus for type "tiny"  (#734)
* Changed media player knob size for skin silicon

* Changed media player knob size for skin carbon

* Added Changelog, fixed and removed unused `css` properties

* Added `unreleased` section in Changelog

* Added an extra space in module.less file

* Undid change in module.less as it was made by mistake

---------

--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -714,12 +714,16 @@
 @agate-slider-active-knob-height: @agate-slider-knob-height;
 @agate-slider-active-knob-transform: @agate-slider-knob-transform;
 @agate-slider-active-knob-width: @agate-slider-active-knob-height;
+@agate-slider-active-tiny-knob-height: @agate-slider-active-knob-height;
+@agate-slider-active-tiny-knob-width: @agate-slider-active-knob-width;
 @agate-slider-bg-transform: none;
 @agate-slider-border-radius: @agate-slider-height;
 @agate-slider-height: @agate-button-height;
 @agate-slider-horizontal-anchorpoint-height: 0px;  // This is used in `calc` which means it needs the unit specified to work correctly
 @agate-slider-horizontal-anchorpoint-width: 0px;  // This is used in `calc` which means it needs the unit specified to work correctly
+@agate-slider-horizontal-tiny-anchorpoint-width: @agate-slider-horizontal-anchorpoint-width;
 @agate-slider-horizontal-margin: 0 @agate-component-spacing;
+@agate-slider-horizontal-tiny-margin: @agate-slider-horizontal-margin;
 @agate-slider-horizontal-min-width: auto;
 @agate-slider-horizontal-padding: ((@agate-slider-height - @agate-slider-track-height) / 2) (@agate-slider-height / 2);
 @agate-slider-knob-border-radius: @agate-slider-knob-height;
@@ -728,6 +732,8 @@
 @agate-slider-knob-resting-state-scale: 1;
 @agate-slider-knob-transform: @agate-translate-center;
 @agate-slider-knob-width: @agate-slider-knob-height;
+@agate-slider-tiny-knob-height: @agate-slider-knob-height;
+@agate-slider-tiny-knob-width: @agate-slider-knob-width;
 @agate-slider-tooltip-above-offset: (@agate-slider-knob-height / -3);
 @agate-slider-tooltip-after-offset: (@agate-slider-knob-height / 3);
 @agate-slider-tooltip-before-offset: (@agate-slider-knob-height / -3);
